--- a/bookapp/src/index.html
+++ b/bookapp/src/index.html
@@ -9,6 +9,9 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+    <div class="col-6 offset-md-3 mt-20" >
+    <app-root></app-root>
+</div>
+  
 </body>
 </html>
